force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__AlternateClauseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AlternateClauseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the clause used to replace the the Standard Clause</description>
    <inlineHelpText>ID of the clause used to replace the the Standard Clause</inlineHelpText>
    <label>Alternate Clause</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Agreement Clauses</relationshipLabel>
    <relationshipName>AgreementClauses</relationshipName>
    <type>Lookup</type>
</CustomField>