force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Category__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confidentiality</fullName>
            </value>
            <value>
                <fullName>Definitions</fullName>
            </value>
            <value>
                <fullName>Disclosure</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Indemnity</fullName>
            </value>
            <value>
                <fullName>Intellectual Property Claims</fullName>
            </value>
            <value>
                <fullName>License Grant</fullName>
            </value>
            <value>
                <fullName>License Restrictions</fullName>
            </value>
            <value>
                <fullName>Limitation of Liability</fullName>
            </value>
            <value>
                <fullName>Maintenance / Support</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Term and Termination</fullName>
            </value>
            <value>
                <fullName>Verification</fullName>
            </value>
            <value>
                <fullName>Warranties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>