force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Comments2__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Comments2__c</fullName>
    <label>Comments</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>