force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Comments__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Comments__c</fullName>
    <label>Comments (Deprecated)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>