force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__ContentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContentId__c</fullName>
    <description>ID of the associated content</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the associated content</inlineHelpText>
    <label>Content</label>
    <length>32</length>
    <type>Text</type>
</CustomField>