force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__DiffText__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DiffText__c</fullName>
    <description>The clause diff text</description>
    <label>Diff Text (Deprecated)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>