force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Exception__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Exception__c</fullName>
    <label>Exception</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>