force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Materially_Significant__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Materially_Significant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Materially Significant</label>
    <type>Checkbox</type>
</CustomField>