force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__PreviousVersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PreviousVersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous version of agreement clause</description>
    <inlineHelpText>Previous version of agreement clause</inlineHelpText>
    <label>Previous Agreement Clause</label>
    <referenceTo>Apttus__Agreement_Clause__c</referenceTo>
    <relationshipLabel>Previous Version Agreement Clauses</relationshipLabel>
    <relationshipName>PreviousAgreementClauseVersions</relationshipName>
    <type>Lookup</type>
</CustomField>