force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Risk_Rating__c</fullName>
    <label>Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>