force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__Template__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipName>R00N50000001os4wEAA</relationshipName>
    <type>Lookup</type>
</CustomField>