force-app/main/default/objects/Apttus__Agreement_Clause__c/fields/Apttus__VersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__VersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates Associated Document Version ID</description>
    <inlineHelpText>Indicates Associated Document Version ID</inlineHelpText>
    <label>Document Version</label>
    <referenceTo>Apttus__DocumentVersion__c</referenceTo>
    <relationshipLabel>Agreement Clauses</relationshipLabel>
    <relationshipName>AgreementClauses</relationshipName>
    <type>Lookup</type>
</CustomField>